<resources>
    <string name="app_name">POC</string>

    <string name="main_view_welcome">Welcome to POC App</string>
    <string name="main_view_username">Username|Email</string>
    <string name="main_view_password">Password</string>
    <string name="main_view_btn_singup">Login</string>
    <string name="main_view_btn_singin">Register</string>
    <string name="main_view_login_fail">User invalid</string>

    <string name="register_view_firstName">First Name</string>
    <string name="register_view_lastName">Last Name</string>
    <string name="register_view_retry_pswd">Re-enter password</string>
    <string name="register_user_created">User adding successfuly</string>
    <string name="register_user_not_created">User not created</string>
</resources>