<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <EditText
            android:id="@+id/reg_et_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/register_view_firstName"
            android:inputType="textPersonName"
            android:singleLine="true">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/reg_et_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_et_firstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/register_view_lastName"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/reg_et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_et_lastname"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/main_view_username"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/reg_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_et_username"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/main_view_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/reg_et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_et_password"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/register_view_retry_pswd"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/reg_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_et_repassword"
            android:layout_marginTop="35dp"
            android:text="@string/main_view_btn_singin" />

    </RelativeLayout>

</ScrollView>